--- a/conf/machine/qemumicroblaze.conf
+++ b/conf/machine/qemumicroblaze.conf
@@ -6,7 +6,7 @@ MACHINE_FEATURES := ""
 
 require conf/machine/include/tune-microblaze.inc
 require conf/machine/include/machine-xilinx-default.inc
-TUNE_FEATURES_tune-microblaze += "v8.50 little-endian barrel-shift reorder pattern-compare divide-hard multiply-high fpu-hard"
+TUNE_FEATURES_tune-microblaze += "v8.50 little-endian barrel-shift reorder pattern-compare divide-hard multiply-high fpu-hard msr"
 
 EXTRA_IMAGEDEPENDS += "qemu-native qemu-helper-native"
 
