qemumicroblaze: Use MACHINE_KCONFIG_* instead of .cfg
* Refactor definitions

Signed-off-by: Nathan Rossi <nathan.rossi@xilinx.com>

--- a/conf/machine/qemumicroblaze.conf
+++ b/conf/machine/qemumicroblaze.conf
@@ -13,4 +13,5 @@ EXTRA_IMAGEDEPENDS += "qemu-native qemu-helper-native"
 SERIAL_CONSOLE = "115200 ttyS0"
 
 MACHINE_DEVICETREE := "qemu/qemumicroblaze.dts"
-MACHINE_KCONFIG := "qemu/qemumicroblaze.cfg"
+MACHINE_KCONFIG_XILINX_MICROBLAZE0_FAMILY = "virtex6"
+MACHINE_KCONFIG_KERNEL_BASE_ADDR = "0x50000000"
