--- a/conf/machine/zc702-zynq7.conf
+++ b/conf/machine/zc702-zynq7.conf
@@ -21,6 +21,7 @@ SERIAL_CONSOLE = "115200 ttyPS0"
 MACHINE_DEVICETREE := " \
 		zc702/zc702-zynq7-board.dtsi \
 		zc702/zc702-zynq7.dts \
+		zc702/zc702-zynq7-amp.dts \
 		"
 
 KERNEL_FEATURES += "features/rtc/rtc.scc"
